--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "cors": "^2.8.5",
     "express": "^4.17.3",
     "express-async-errors": "^3.1.1",
-    "helmet": "^5.0.2"
+    "helmet": "^5.0.2",
+    "knex": "^1.0.3",
+    "pg": "^8.7.3"
   },
   "devDependencies": {
     "@commitlint/cli": "^16.2.1",
