--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "express-async-errors": "^3.1.1",
     "helmet": "^5.0.2",
     "knex": "^1.0.3",
+    "nodemailer": "^6.7.2",
     "pg": "^8.7.3"
   },
   "devDependencies": {
@@ -26,6 +27,7 @@
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
     "@types/jest": "^27.4.1",
+    "@types/nodemailer": "^6.4.4",
     "@typescript-eslint/eslint-plugin": "^5.12.1",
     "@typescript-eslint/parser": "^5.12.1",
     "commitizen": "^4.2.4",
